# AIHarmonize

./: .gitignore  README.md  pyproject.toml
aiharmonize/: LICENSE  README.md  pyproject.toml
aiharmonize/.github/workflows/: main.yml
aiharmonize/src/aiharmonize/: __init__.py  cmdline.py
aiharmonize/src/aiharmonize/config/: __init__.py  settings.yml
aiharmonize/tests/: test_cmdline.py
docs/: development.md
src/aiharmonize/: cmdline.py  constants.py  exceptions.py  log.py  manage.py
src/aiharmonize/communication_element/: architect2executor.py  base.py  executor2testor.py  human2architect.py  tester2architect.py
src/aiharmonize/config/: settings.yml
src/aiharmonize/examples/: CachedCalculator.py  FileOutputCalculator.py
src/aiharmonize/extractor/: base.py  langchain.py
src/aiharmonize/harmonizeai/: base.py  communication_element.py  openai.py
src/aiharmonize/llm/: architect.py  base.py  executor.py  tester.py
src/aiharmonize/loader/: base.py  file.py
tests/: __init__.py  conftest.py  test_cmdline.py  test_exceptions.py  test_extractor.py  test_harmonizeai.py  test_loader.py  test_log.py  test_manage.py  test_version.py
