[tool.poetry]
name = "aiharmonize"
version = "0.1.0"
description = "Use llm to integrate systems with identical features."
readme = "README.md"
authors = ["Author <author@example.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.12"
click = "^8.1.3"
langchain = "^0.0.202"
stevedore = "^5.1.0"

[tool.poetry.plugins."ai_harmonize.extractor"]
file = "aiharmonize.extractor.langchain:LangchainExtractor"

[tool.poetry.plugins."ai_harmonize.harmonizeai"]
file = "aiharmonize.harmonizeai.openai:Gpt3HarmonizeAI"

[tool.poetry.plugins."ai_harmonize.loader"]
strip = "aiharmonize.loader.file:FileLoader"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
aiharmonize = "aiharmonize.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
