[tool.poetry]
name = "aiharmonize"
version = "0.1.0"
description = "Use llm to integrate systems with identical features."
readme = "README.md"
authors = ["Author <author@example.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.12"
click = "^8.1.3"
langchain = "^0.0.202"
stevedore = "^5.1.0"
openai = "^0.27.8"
gradio = "^3.35.2"
pyan = "^0.1.3"
pycallgraph2 = "^1.1.3"
pyan3 = "^1.2.0"
ipython = "^8.14.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"
graphviz-py = "^1.0.8"
dotpy = "^0.0.2"

[tool.poetry.plugins."aiharmonize.extractor"]
langchain = "aiharmonize.extractor.langchain:LangchainExtractor"

[tool.poetry.plugins."aiharmonize.harmonizeai"]
openai = "aiharmonize.harmonizeai.openai:Gpt3HarmonizeAI"

[tool.poetry.plugins."aiharmonize.loader"]
file = "aiharmonize.loader.file:FileLoader"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
aiharmonize = "aiharmonize.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
